--- a/app/src/main/res/layout/recyclerview_item_layout.xml
+++ b/app/src/main/res/layout/recyclerview_item_layout.xml
@@ -10,28 +10,49 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp">
+        android:orientation="vertical"
+        android:padding="10dp">
 
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/imglogo"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Esha Gajjar"
+                android:textSize="16sp"
+                android:layout_marginStart="15dp"
+                android:textColor="@color/black" />
+
+
+            <TextView
+                android:id="@+id/standard"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="10th"
+                android:layout_marginEnd="10dp"
+                android:textSize="16sp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="15dp"
+                android:textColor="@color/black"/>
+
+        </RelativeLayout>
+.
 
         <TextView
-            android:id="@+id/name"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Android Developer Things"
-            android:layout_gravity="center_vertical"
-            android:gravity="center_vertical"
-            android:layout_marginStart="20dp"
-            android:textSize="20sp"
-            android:textColor="@color/black"
-            android:textStyle="bold"/>
+            android:id="@+id/subject"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Maths"
+            android:textSize="16sp"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="15dp"
+            android:textColor="@color/black"/>
+
 
     </LinearLayout>
-
 
 
 </androidx.cardview.widget.CardView>
