--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="lightgrey">#0A000000</color>
 
     <color name="green">#4CAF50</color>
+    <color name="lightyellow">#8FFFEB3B</color>
 
 </resources>
